--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -11,11 +11,14 @@
 
 .post-list .post:hover {
     transform: scale(1.02);
+    border-color: rgb(63, 184, 214);
 }
 
 .post h2 {
     margin: 0;
     font-size: 24px;
+    color: rgb(63, 184, 214);
+    text-transform: capitalize;
 }
 
 .post p {
